@@ -27,9 +27,9 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.25.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.7'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
+    implementation 'org.springframework:spring-jdbc:6.2.3'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
