@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="main" class="edu.mcw.rgd.pipelines.agr.Main" >
-        <property name="version" value="Alliance Submission Pipeline  -- build Jan 22, 2025" />
+        <property name="version" value="Alliance Submission Pipeline  -- build Feb 25, 2025" />
         <property name="dao" ref="dao"/>
     </bean>
 
@@ -108,6 +108,10 @@
     </bean>
 
     <bean id="curationAlleleAssociationGenerator" class="edu.mcw.rgd.pipelines.agr.CurationAlleleAssociationGenerator" >
+        <property name="dao" ref="dao"/>
+    </bean>
+
+    <bean id="curationAGMAssociationGenerator" class="edu.mcw.rgd.pipelines.agr.CurationAGMAssociationGenerator" >
         <property name="dao" ref="dao"/>
     </bean>
 
